helm-jupyterhub/ingress-data-science.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  namespace: data-science
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "160"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "160"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "160"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "160"
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: proxy-public
              port:
                number: 80
